--- a/index.html
+++ b/index.html
@@ -106,79 +106,56 @@
         <div class="inner">
           <h2>About me</h2>
           <p>
-            Salt Lake City is where I call home. I grew up in Boulder, Colorado,
-            and have been in Utah ever since. I enjoy golf, cooking, travel,
-            spending time with friends and family, and learning new things. I
-            like to optimize workflows using code.
+            Salt Lake City is where I call home. I enjoy golf, cooking, travel,
+            spending time with friends and family, and learning new things.
           </p>
           <div class="features">
             <section>
               <span class="icon solid major fa-golf-ball"></span>
               <h3>Golf</h3>
               <p>
-                I'm a 14 handicap who's just good enough to function but will
-                likely make you feel good about your golf game, especially on
-                the putting green! I drink responsibly on the course, have been
-                known to be encouraging and laid back, am more than happy to
-                turn a blind eye for a mulligan or two, and I always have extra
-                golf balls. Let's play golf!
+                I've been known to be encouraging and laid back, am more than
+                happy to turn a blind eye for a mulligan or two, and I always
+                have extra golf balls. Let's play golf!
               </p>
             </section>
             <section>
               <span class="icon solid major fa-code"></span>
               <h3>Full-stack Javascript</h3>
               <p>
-                ReactJS, NodeJS, ExpressJS, Typescript, you name it. I love
-                solving problems using Javascript. Let's build a full-stack
-                application!
+                ReactJS, NodeJS, ExpressJS, etc. I love solving problems using
+                Javascript. Let's build a full-stack application!
               </p>
             </section>
             <section>
               <span class="icon solid major fa-desktop"></span>
               <h3>Front End</h3>
               <p>
-                I can make visually appealing apps using the latest technology.
-                ReactJS layouts is my speciality. I emphasize clean,
-                user-friendly layouts. My processes involves understanding the
-                user experience from start to finish, and building a UI to
-                facilitate our vision. Let's build a responsive, user-focused
-                front end application!
+                Let's build a responsive, user-focused front end application!
               </p>
             </section>
             <section>
               <span class="icon solid major fa-server"></span>
               <h3>Back End</h3>
               <p>
-                I have experience building back end services using NodeJS. I
-                have spent a lot of time building schemas to store and manage
-                data, including integrating with Node specific ORMs like Prisma.
-                I am data oriented and have the ability to model complex data
-                structures. Let's build an API, in-house server, or facilitate
-                the storage, management, and utilization of data for your
-                business!
+                Let's build an API, in-house server, or facilitate the storage,
+                management, and utilization of data for your business!
               </p>
             </section>
             <section>
               <span class="icon solid major fa-link"></span>
               <h3>Process Oriented</h3>
               <p>
-                Thanks to years of experience in management and operations -
-                I've developed a deep appreciation for process-oriented business
-                solutions, and have developed the skills and tools to identify
-                and optimize workflows. Let's optimize your workflows and build
-                scalable, user-friendly solutions that will automate your
-                business!
+                Let's optimize your workflows and build scalable, user-friendly
+                solutions that will automate your business!
               </p>
             </section>
             <section>
               <span class="icon solid major fa-calculator"></span>
-              <h3>Analytical Approach to Management</h3>
+              <h3>Analytical Approach to Business</h3>
               <p>
-                Thanks to a passion for business and a knack for identifying
-                power-house KPIs, I have the ability to elevate an operations
-                team using proven business tactics and data driven management
-                techniques. Let's scale your operations and streamline your
-                management workflows!
+                Let's scale your operations and streamline your management
+                workflows!
               </p>
             </section>
           </div>
